--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,21 @@
 
 body {
   color: var(--primary-text-color);
-  background-color: #e5e5e5;
+  background: #ffffff;
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 .list {
@@ -19,6 +31,12 @@ body {
 
 .link {
   text-decoration: none;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 /* Logo */
@@ -43,6 +61,7 @@ body {
 }
 
 /* Navbar */
+
 .nkey > a {
   color: var(--primary-text-color);
   font-size: 14px;
@@ -84,6 +103,8 @@ body {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .hero-button {
@@ -95,15 +116,23 @@ body {
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
+  padding: 10px 32px;
+  text-align: center;
 }
 
 /* Peculiarities-sect */
+
+.peculiarities-container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 .pcaption {
   color: var(--primary-text-color);
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 
 .detail > p {
@@ -114,13 +143,26 @@ body {
 
 /* Ourwork-sect */
 
+.ourwork-container {
+  padding-bottom: 94px;
+}
+
 .hcaption {
   color: var(--primary-text-color);
   font-size: 36px;
   line-height: 1.16;
+  margin-bottom: 50px;
 }
 
 /* Ourteam-sect */
+.ourteam {
+  background: #f5f4fa;
+}
+
+.ourteam-container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 .fsname {
   color: var(--primary-text-color);
@@ -137,6 +179,23 @@ body {
 /* Footer */
 .basement {
   background-color: #2f303a;
+}
+
+.footer-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer-logo {
+  margin-bottom: 20px;
+}
+
+.adress {
+  margin-bottom: 9px;
+}
+
+.adress-phone {
+  margin-bottom: 0;
 }
 
 .adress a {
@@ -181,11 +240,17 @@ body {
 }
 
 /* card */
+
+.card > img {
+  margin-bottom: 20px;
+}
+
 .card > h2 {
   color: var(--primary-text-color);
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 
 .card > p {
